--- a/index.html
+++ b/index.html
@@ -483,21 +483,73 @@ function openCollectionModal(src) {
 
     
 
-    function postQuote() {
-      const input = document.getElementById("quoteInput");
-      const text = input.value.trim();
-      if (!text) return;
+    // ---------- DEBUG HELPERS (paste immediately after `const db = firebase.database();`) ----------
+console.log("Firebase apps:", firebase.apps);
+console.log("Firebase app options:", firebase.apps[0] && firebase.apps[0].options);
 
-      const entry = {
-        text,
-        reacts: { "❤️": 0, "😆": 0, "😢": 0, "😮": 0, "😡": 0 },
-        selectedReaction: null,
-        timestamp: Date.now()
-      };
+// show databaseURL
+try { console.log("DB URL:", firebase.apps[0].options.databaseURL); } catch(e){console.warn(e);}
 
-      db.ref("quotes").push(entry).catch(err => console.error("Failed to push quote:", err));
+// watch connection state (Realtime DB)
+db.ref(".info/connected").on("value", snap => {
+  console.log(".info/connected:", snap.val());
+});
+
+// small test write (non-destructive)
+function testWrite() {
+  const tpath = "debug/testWrites";
+  const payload = { ts: Date.now(), source: "site-debug" };
+  console.log("Attempting test write to", tpath, payload);
+  db.ref(tpath).push(payload)
+    .then(() => {
+      console.log("✅ Test write successful. Check Firebase console at path:", tpath);
+      alert("✅ Test write ok — check Firebase Realtime Database console for /debug/testWrites");
+    })
+    .catch(err => {
+      console.error("❌ Test write failed:", err);
+      alert("❌ Test write failed — see console for details");
+    });
+}
+
+// replace postQuote with this debug-friendly variant (or paste into your code to overwrite)
+function postQuoteDebug() {
+  const input = document.getElementById("quoteInput");
+  const text = input.value.trim();
+  if (!text) { alert("Please type a quote first"); return; }
+
+  const entry = {
+    text,
+    reacts: { "❤️": 0, "😆": 0, "😢": 0, "😮": 0, "😡": 0 },
+    selectedReaction: null,
+    timestamp: Date.now()
+  };
+
+  console.log("Posting quote to /quotes:", entry);
+  db.ref("quotes").push(entry)
+    .then(() => {
+      console.log("✅ push() resolved — quote added");
+      alert("Quote posted! Refresh Firebase console (Realtime DB) to verify.");
       input.value = "";
-    }  
+    })
+    .catch(err => {
+      console.error("❌ push() error:", err);
+      alert("Failed to post quote — check console for error (permission/network).");
+    });
+}
+
+// call testWrite() manually in console or attach a temp button to run it easily:
+const dbgBtn = document.createElement("button");
+dbgBtn.textContent = "DEBUG: testWrite()";
+dbgBtn.style.position = "fixed";
+dbgBtn.style.bottom = "8px";
+dbgBtn.style.right = "8px";
+dbgBtn.style.zIndex = 9999;
+dbgBtn.onclick = testWrite;
+document.body.appendChild(dbgBtn);
+// Also attach postQuoteDebug to the existing Post Quote button temporarily:
+const postBtn = document.querySelector('[onclick="postQuote()"]');
+if (postBtn) postBtn.onclick = postQuoteDebug;
+// ---------- END DEBUG HELPERS ----------
 
 
     const randomQuotes = [
