--- a/index.html
+++ b/index.html
@@ -435,14 +435,14 @@ let selectedMemeURL = null;
     const reactions = ["❤️", "😆", "😢", "😮", "😡"];
 
     const firebaseConfig = {
-      apiKey: "AIzaSyD9B8m_cJ2kXQuwoliL3WAowC-hFgPBjBg",
-      authDomain: "student-cozy-corner.firebaseapp.com",
-      databaseURL: "https://student-cozy-corner-default-rtdb.firebaseio.com",
-      projectId: "student-cozy-corner",
-      storageBucket: "student-cozy-corner.appspot.com",
-      messagingSenderId: "436355859247",
-      appId: "1:436355859247:web:a98f51fb48219596ad57da"
-    };
+  apiKey: "AIzaSyD9B8m_cJ2kXQuwoliL3WAowC-hFgPBjBg",
+  authDomain: "student-cozy-corner.firebaseapp.com",
+  databaseURL: "https://student-cozy-corner-default-rtdb.asia-southeast1.firebasedatabase.app", 
+  storageBucket: "student-cozy-corner.appspot.com",
+  messagingSenderId: "436355859247",
+  appId: "1:436355859247:web:a98f51fb48219596ad57da"
+};
+
 
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
