--- a/index.html
+++ b/index.html
@@ -989,11 +989,98 @@ function showCoffeeTrivia() {
   }, 4000);
 }
 
-setTimeout(() => {
-  showCoffeeTrivia();
-  setInterval(showCoffeeTrivia, 7000);
-}, 3000);
 
+let reminderEnabled = true;
+let reminderMode = 'coffeeTrivia'; // 'coffeeTrivia' or 'relax'
+let reminderTimeoutId = null;
+let reminderIntervalId = null;
+
+function showReminder() {
+  const modal = document.getElementById("coffeeTriviaModal");
+  modal.textContent = "Relax and Chill";
+  modal.style.display = "block";
+  setTimeout(() => {
+    modal.style.display = "none";
+  }, 3000);
+}
+
+function startReminderScheduler() {
+  stopReminderScheduler();
+  if (!reminderEnabled) return;
+  const initialDelay = 3000;
+  if (reminderMode === 'coffeeTrivia') {
+    reminderTimeoutId = setTimeout(() => {
+      showCoffeeTrivia();
+      reminderIntervalId = setInterval(showCoffeeTrivia, 7000);
+    }, initialDelay);
+  } else {
+    reminderTimeoutId = setTimeout(() => {
+      showReminder();
+      reminderIntervalId = setInterval(showReminder, 5000);
+    }, initialDelay);
+  }
+}
+
+function stopReminderScheduler() {
+  if (reminderTimeoutId) { clearTimeout(reminderTimeoutId); reminderTimeoutId = null; }
+  if (reminderIntervalId) { clearInterval(reminderIntervalId); reminderIntervalId = null; }
+  const modal = document.getElementById("coffeeTriviaModal");
+  if (modal) modal.style.display = "none";
+}
+
+function toggleReminderEnabled(enabled) {
+  reminderEnabled = enabled;
+  if (enabled) startReminderScheduler(); else stopReminderScheduler();
+}
+
+function setReminderMode(mode) {
+  reminderMode = mode;
+  if (reminderEnabled) startReminderScheduler();
+  showNotification('Reminder mode: ' + (mode === 'coffeeTrivia' ? 'Coffee Trivia' : 'Relax & Chill'));
+}
+
+function createReminderControls() {
+  const panel = document.createElement('div');
+  panel.id = 'reminderControls';
+  panel.style.position = 'fixed';
+  panel.style.top = '100px';
+  panel.style.right = '16px';
+  panel.style.background = '#fff3e0';
+  panel.style.padding = '10px';
+  panel.style.borderRadius = '8px';
+  panel.style.boxShadow = '0 4px 12px rgba(0,0,0,0.1)';
+  panel.style.zIndex = 9999;
+  panel.style.fontFamily = 'Segoe UI, sans-serif';
+  panel.style.display = 'flex';
+  panel.style.gap = '8px';
+  panel.style.alignItems = 'center';
+
+  const chk = document.createElement('input');
+  chk.type = 'checkbox';
+  chk.checked = reminderEnabled;
+  chk.onchange = () => toggleReminderEnabled(chk.checked);
+  panel.appendChild(chk);
+
+  const lbl = document.createElement('span');
+  lbl.textContent = 'Reminders';
+  panel.appendChild(lbl);
+
+  const sel = document.createElement('select');
+  const opt1 = new Option('Coffee Trivia','coffeeTrivia');
+  const opt2 = new Option('Relax & Chill','relax');
+  sel.add(opt1);
+  sel.add(opt2);
+  sel.value = reminderMode;
+  sel.onchange = () => setReminderMode(sel.value);
+  panel.appendChild(sel);
+
+  document.body.appendChild(panel);
+}
+
+createReminderControls();
+startReminderScheduler();
+
+    
 function downloadMeme() {
   const canvas = document.getElementById("memeCanvas");
   const link = document.createElement("a");
