--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@ let reminderIntervalId = null;
 
 function showReminder() {
   const modal = document.getElementById("coffeeTriviaModal");
-  modal.textContent = "Relax and Chill";
+  modal.textContent = "Relax and Chill🍃✨";
   modal.style.display = "block";
   setTimeout(() => {
     modal.style.display = "none";
