--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@ function generateRandomMeme() {
   "🎼☕ Beethoven was a coffee snob — he counted exactly 60 beans per cup before brewing. Precision brewing, classical edition.",
   "👀📹 The first webcam was invented to monitor a coffee pot at Cambridge University. Because hallway disappointment is real.",
   "🍷🕊️ Coffee was once called the 'wine of Islam' — praised for its energizing effects and used in spiritual rituals before going global.",
-  "wAlA pArin aKonG tUlOg hiHihiE💕✨"
+  "wAlA pArin aKonG tUlOg hiHihiE💕✨",
 ];
 
 function showCoffeeTrivia() {
